fix: accounts service to no longer be registration service
